feat: Implement neumorphic design system, update fonts, and remove ParseSense.html.

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&family=Outfit:wght@500;600;700;800&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@300;400;500;600&family=JetBrains+Mono:wght@300;400;500;600&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/styles.css" />
@@ -21,10 +21,7 @@
     <div id="nav-placeholder"></div>
 
     <!-- About Hero -->
-    <section
-      class="about-hero"
-      style="padding-top: 160px; text-align: center; background: white"
-    >
+    <section class="about-hero">
       <div class="section-label">OUR MISSION</div>
       <h1 class="section-title">Democratizing Web Intelligence</h1>
       <p
@@ -37,25 +34,7 @@
         of AI applications.
       </p>
 
-      <div
-        style="
-          max-width: 1000px;
-          margin: 0 auto;
-          background: var(--neutral-100);
-          height: 400px;
-          border-radius: var(--radius-xl);
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          font-family: var(--font-display);
-          font-weight: 800;
-          color: var(--neutral-300);
-          font-size: 2rem;
-          border: 1px dashed var(--neutral-300);
-        "
-      >
-        [ OUR STORY VISUAL ]
-      </div>
+      <div class="story-visual">[ OUR STORY VISUAL ]</div>
     </section>
 
     <!-- Values Section -->
@@ -65,14 +44,9 @@
         <h2 class="section-title">What Drives Us</h2>
       </div>
 
-      <div class="features-grid" style="max-width: 1200px; margin: 0 auto">
+      <div class="values-grid">
         <div class="feature-card">
-          <div
-            class="feature-icon-wrapper"
-            style="background: var(--neutral-100)"
-          >
-            🎯
-          </div>
+          <div class="feature-icon-wrapper">🎯</div>
           <h3>Precision First</h3>
           <p>
             We don't just scrape; we understand. Our AI is tuned for accuracy,
@@ -80,12 +54,7 @@
           </p>
         </div>
         <div class="feature-card">
-          <div
-            class="feature-icon-wrapper"
-            style="background: var(--neutral-100)"
-          >
-            🚀
-          </div>
+          <div class="feature-icon-wrapper">🚀</div>
           <h3>Built for Speed</h3>
           <p>
             Time is data. Our distributed infrastructure ensures that even the
@@ -93,12 +62,7 @@
           </p>
         </div>
         <div class="feature-card">
-          <div
-            class="feature-icon-wrapper"
-            style="background: var(--neutral-100)"
-          >
-            🛡️
-          </div>
+          <div class="feature-icon-wrapper">🛡️</div>
           <h3>Ethical Sourcing</h3>
           <p>
             We respect the web. Our tools are designed to follow robots.txt and
@@ -109,25 +73,17 @@
     </section>
 
     <!-- Team / Arithemiq -->
-    <section
-      class="arithemiq"
-      style="
-        background: var(--neutral-900);
-        color: white;
-        border-radius: var(--radius-3xl) var(--radius-3xl) 0 0;
-        margin-top: 4rem;
-      "
-    >
+    <section class="arithemiq">
       <div class="section-header">
-        <div class="section-label" style="color: var(--primary)">THE TEAM</div>
-        <h2 class="section-title" style="color: white">Powered by Arithemiq</h2>
-        <p class="section-description" style="color: var(--neutral-400)">
+        <div class="section-label">THE TEAM</div>
+        <h2 class="section-title">Powered by Arithemiq</h2>
+        <p class="section-description">
           ParseSense is a product of Arithemiq, a research-led AI company
           dedicated to building infrastructure for the intelligent future.
         </p>
       </div>
 
-      <div style="text-align: center; margin-top: 4rem">
+      <div class="arithemiq-cta">
         <a href="https://arithemiq.com" class="btn btn-primary"
           >Learn More about Arithemiq</a
         >
