--- a/how-it-works.html
+++ b/how-it-works.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&family=Outfit:wght@500;600;700;800&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@300;400;500;600&family=JetBrains+Mono:wght@300;400;500;600&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/styles.css" />
@@ -78,7 +78,7 @@
     </section>
 
     <!-- Additional Details Section -->
-    <section class="features" style="background: white">
+    <section class="features">
       <div class="section-header">
         <div class="section-label">TECHNICAL DETAILS</div>
         <h2 class="section-title">Built for Scale and Reliability</h2>
@@ -90,12 +90,7 @@
 
       <div class="features-grid">
         <div class="feature-card slide-up">
-          <div
-            class="feature-icon-wrapper"
-            style="background: linear-gradient(135deg, #dbeafe, #bfdbfe)"
-          >
-            ⚙️
-          </div>
+          <div class="feature-icon-wrapper">⚙️</div>
           <h3>Distributed Processing</h3>
           <p>
             Horizontal scaling with automatic load balancing ensures your
@@ -105,12 +100,7 @@
         </div>
 
         <div class="feature-card slide-up">
-          <div
-            class="feature-icon-wrapper"
-            style="background: linear-gradient(135deg, #f3e8ff, #e9d5ff)"
-          >
-            🛡️
-          </div>
+          <div class="feature-icon-wrapper">🛡️</div>
           <h3>Smart Rate Limiting</h3>
           <p>
             Intelligent throttling respects robots.txt and adapts to server
@@ -119,12 +109,7 @@
         </div>
 
         <div class="feature-card slide-up">
-          <div
-            class="feature-icon-wrapper"
-            style="background: linear-gradient(135deg, #fce7f3, #fbcfe8)"
-          >
-            🔄
-          </div>
+          <div class="feature-icon-wrapper">🔄</div>
           <h3>Automatic Retries</h3>
           <p>
             Built-in retry logic with exponential backoff handles transient
@@ -133,12 +118,7 @@
         </div>
 
         <div class="feature-card slide-up">
-          <div
-            class="feature-icon-wrapper"
-            style="background: linear-gradient(135deg, #d1fae5, #a7f3d0)"
-          >
-            📊
-          </div>
+          <div class="feature-icon-wrapper">📊</div>
           <h3>Data Quality Checks</h3>
           <p>
             Automated validation ensures extracted data meets your quality
@@ -147,12 +127,7 @@
         </div>
 
         <div class="feature-card slide-up">
-          <div
-            class="feature-icon-wrapper"
-            style="background: linear-gradient(135deg, #fed7aa, #fdba74)"
-          >
-            🔍
-          </div>
+          <div class="feature-icon-wrapper">🔍</div>
           <h3>Change Detection</h3>
           <p>
             Monitor pages for changes and trigger scrapes automatically when
@@ -161,12 +136,7 @@
         </div>
 
         <div class="feature-card slide-up">
-          <div
-            class="feature-icon-wrapper"
-            style="background: linear-gradient(135deg, #fef3c7, #fde68a)"
-          >
-            📝
-          </div>
+          <div class="feature-icon-wrapper">📝</div>
           <h3>Detailed Logging</h3>
           <p>
             Comprehensive logs for every scraping job provide full visibility
@@ -189,7 +159,9 @@
           <a href="https://console.parsesense.com" class="btn btn-white">
             Try It Free →
           </a>
-          <a href="use-cases.html" class="btn btn-outline"> View Use Cases </a>
+          <a href="use-cases.html" class="btn btn-secondary">
+            View Use Cases
+          </a>
         </div>
       </div>
     </section>
