--- a/pricing.html
+++ b/pricing.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&family=Outfit:wght@500;600;700;800&family=JetBrains+Mono:wght@400;500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@300;400;500;600&family=JetBrains+Mono:wght@300;400;500;600&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/styles.css" />
@@ -21,10 +21,7 @@
     <div id="nav-placeholder"></div>
 
     <!-- Pricing Hero -->
-    <section
-      class="pricing-hero"
-      style="padding-top: 160px; text-align: center"
-    >
+    <section class="pricing-hero">
       <div class="section-label">PRICING PLANS</div>
       <h1 class="section-title">Scale Your Data, Not Your Costs</h1>
       <p
@@ -35,54 +32,19 @@
         parsing and universal integrations.
       </p>
 
-      <div
-        class="pricing-grid"
-        style="
-          max-width: 1200px;
-          margin: 0 auto;
-          display: grid;
-          grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-          gap: 2rem;
-        "
-      >
+      <div class="pricing-grid">
         <!-- Starter Plan -->
-        <div
-          class="feature-card"
-          style="display: flex; flex-direction: column; text-align: left"
-        >
-          <div style="margin-bottom: 2rem">
-            <h3 style="margin-bottom: 0.5rem">Starter</h3>
-            <p style="font-size: 0.9rem; color: var(--neutral-500)">
-              Perfect for small scraping tasks.
-            </p>
+        <div class="pricing-card">
+          <div class="pricing-header">
+            <h3>Starter</h3>
+            <p>Perfect for small scraping tasks.</p>
           </div>
-          <div style="margin-bottom: 2rem">
-            <span
-              style="
-                font-size: 3rem;
-                font-weight: 800;
-                color: var(--neutral-900);
-              "
-              >$29</span
-            >
-            <span style="color: var(--neutral-500)">/mo</span>
+          <div class="pricing-amount">
+            <span class="price">$29</span>
+            <span class="period">/mo</span>
           </div>
-          <ul
-            style="
-              list-style: none;
-              padding: 0;
-              margin-bottom: 2rem;
-              flex-grow: 1;
-            "
-          >
-            <li
-              style="
-                margin-bottom: 1rem;
-                display: flex;
-                align-items: center;
-                gap: 0.5rem;
-              "
-            >
+          <ul class="pricing-features">
+            <li>
               <svg
                 width="20"
                 height="20"
@@ -97,14 +59,7 @@
               </svg>
               5,000 Pages /mo
             </li>
-            <li
-              style="
-                margin-bottom: 1rem;
-                display: flex;
-                align-items: center;
-                gap: 0.5rem;
-              "
-            >
+            <li>
               <svg
                 width="20"
                 height="20"
@@ -119,14 +74,7 @@
               </svg>
               Standard AI Parsing
             </li>
-            <li
-              style="
-                margin-bottom: 1rem;
-                display: flex;
-                align-items: center;
-                gap: 0.5rem;
-              "
-            >
+            <li>
               <svg
                 width="20"
                 height="20"
@@ -141,15 +89,7 @@
               </svg>
               3 Integrations
             </li>
-            <li
-              style="
-                margin-bottom: 1rem;
-                display: flex;
-                align-items: center;
-                gap: 0.5rem;
-                color: var(--neutral-400);
-              "
-            >
+            <li class="disabled">
               <svg
                 width="20"
                 height="20"
@@ -166,67 +106,24 @@
               Advanced Chunking
             </li>
           </ul>
-          <a
-            href="https://console.parsesense.com"
-            class="btn btn-secondary"
-            style="width: 100%; justify-content: center"
+          <a href="https://console.parsesense.com" class="btn btn-secondary"
             >Start Free Trial</a
           >
         </div>
 
         <!-- Pro Plan -->
-        <div
-          class="feature-card"
-          style="
-            display: flex;
-            flex-direction: column;
-            text-align: left;
-            border-color: var(--primary);
-            box-shadow: var(--shadow-xl);
-            transform: scale(1.05);
-            z-index: 10;
-            background: white;
-          "
-        >
-          <div
-            class="badge-new"
-            style="margin-bottom: 1rem; align-self: flex-start"
-          >
-            MOST POPULAR
+        <div class="pricing-card pricing-card-featured">
+          <div class="pricing-badge">MOST POPULAR</div>
+          <div class="pricing-header">
+            <h3>Professional</h3>
+            <p>Scaling businesses & AI startups.</p>
           </div>
-          <div style="margin-bottom: 2rem">
-            <h3 style="margin-bottom: 0.5rem">Professional</h3>
-            <p style="font-size: 0.9rem; color: var(--neutral-500)">
-              Scaling businesses & AI startups.
-            </p>
+          <div class="pricing-amount">
+            <span class="price">$99</span>
+            <span class="period">/mo</span>
           </div>
-          <div style="margin-bottom: 2rem">
-            <span
-              style="
-                font-size: 3rem;
-                font-weight: 800;
-                color: var(--neutral-900);
-              "
-              >$99</span
-            >
-            <span style="color: var(--neutral-500)">/mo</span>
-          </div>
-          <ul
-            style="
-              list-style: none;
-              padding: 0;
-              margin-bottom: 2rem;
-              flex-grow: 1;
-            "
-          >
-            <li
-              style="
-                margin-bottom: 1rem;
-                display: flex;
-                align-items: center;
-                gap: 0.5rem;
-              "
-            >
+          <ul class="pricing-features">
+            <li>
               <svg
                 width="20"
                 height="20"
@@ -241,14 +138,7 @@
               </svg>
               50,000 Pages /mo
             </li>
-            <li
-              style="
-                margin-bottom: 1rem;
-                display: flex;
-                align-items: center;
-                gap: 0.5rem;
-              "
-            >
+            <li>
               <svg
                 width="20"
                 height="20"
@@ -263,14 +153,7 @@
               </svg>
               Advanced AI Parsing
             </li>
-            <li
-              style="
-                margin-bottom: 1rem;
-                display: flex;
-                align-items: center;
-                gap: 0.5rem;
-              "
-            >
+            <li>
               <svg
                 width="20"
                 height="20"
@@ -285,14 +168,7 @@
               </svg>
               Unlimited Integrations
             </li>
-            <li
-              style="
-                margin-bottom: 1rem;
-                display: flex;
-                align-items: center;
-                gap: 0.5rem;
-              "
-            >
+            <li>
               <svg
                 width="20"
                 height="20"
@@ -308,51 +184,22 @@
               Vector DB Exports
             </li>
           </ul>
-          <a
-            href="https://console.parsesense.com"
-            class="btn btn-primary"
-            style="width: 100%; justify-content: center"
+          <a href="https://console.parsesense.com" class="btn btn-primary"
             >Get Started</a
           >
         </div>
 
         <!-- Enterprise Plan -->
-        <div
-          class="feature-card"
-          style="display: flex; flex-direction: column; text-align: left"
-        >
-          <div style="margin-bottom: 2rem">
-            <h3 style="margin-bottom: 0.5rem">Enterprise</h3>
-            <p style="font-size: 0.9rem; color: var(--neutral-500)">
-              Custom solutions for global scale.
-            </p>
+        <div class="pricing-card">
+          <div class="pricing-header">
+            <h3>Enterprise</h3>
+            <p>Custom solutions for global scale.</p>
           </div>
-          <div style="margin-bottom: 2rem">
-            <span
-              style="
-                font-size: 3rem;
-                font-weight: 800;
-                color: var(--neutral-900);
-              "
-              >Custom</span
-            >
+          <div class="pricing-amount">
+            <span class="price">Custom</span>
           </div>
-          <ul
-            style="
-              list-style: none;
-              padding: 0;
-              margin-bottom: 2rem;
-              flex-grow: 1;
-            "
-          >
-            <li
-              style="
-                margin-bottom: 1rem;
-                display: flex;
-                align-items: center;
-                gap: 0.5rem;
-              "
-            >
+          <ul class="pricing-features">
+            <li>
               <svg
                 width="20"
                 height="20"
@@ -367,14 +214,7 @@
               </svg>
               Unlimited Everything
             </li>
-            <li
-              style="
-                margin-bottom: 1rem;
-                display: flex;
-                align-items: center;
-                gap: 0.5rem;
-              "
-            >
+            <li>
               <svg
                 width="20"
                 height="20"
@@ -389,14 +229,7 @@
               </svg>
               Dedicated Support
             </li>
-            <li
-              style="
-                margin-bottom: 1rem;
-                display: flex;
-                align-items: center;
-                gap: 0.5rem;
-              "
-            >
+            <li>
               <svg
                 width="20"
                 height="20"
@@ -411,14 +244,7 @@
               </svg>
               SLA Guarantees
             </li>
-            <li
-              style="
-                margin-bottom: 1rem;
-                display: flex;
-                align-items: center;
-                gap: 0.5rem;
-              "
-            >
+            <li>
               <svg
                 width="20"
                 height="20"
@@ -434,10 +260,7 @@
               White-label Option
             </li>
           </ul>
-          <a
-            href="mailto:sales@arithemiq.com"
-            class="btn btn-secondary"
-            style="width: 100%; justify-content: center"
+          <a href="mailto:sales@arithemiq.com" class="btn btn-secondary"
             >Contact Sales</a
           >
         </div>
@@ -445,46 +268,28 @@
     </section>
 
     <!-- FAQ Section -->
-    <section class="faq" style="background: white">
+    <section class="faq">
       <div class="section-header">
         <h2 class="section-title">Frequently Asked Questions</h2>
       </div>
-      <div style="max-width: 800px; margin: 0 auto">
-        <div
-          style="
-            margin-bottom: 2rem;
-            padding-bottom: 2rem;
-            border-bottom: 1px solid var(--neutral-100);
-          "
-        >
-          <h4 style="margin-bottom: 0.5rem; font-weight: 700">
-            What counts as a "page"?
-          </h4>
-          <p style="color: var(--neutral-600)">
+      <div class="faq-grid">
+        <div class="faq-item">
+          <h4>What counts as a "page"?</h4>
+          <p>
             Every unique URL that ParseSense successfully scrapes and parses
             counts as one page.
           </p>
         </div>
-        <div
-          style="
-            margin-bottom: 2rem;
-            padding-bottom: 2rem;
-            border-bottom: 1px solid var(--neutral-100);
-          "
-        >
-          <h4 style="margin-bottom: 0.5rem; font-weight: 700">
-            Can I change plans anytime?
-          </h4>
-          <p style="color: var(--neutral-600)">
+        <div class="faq-item">
+          <h4>Can I change plans anytime?</h4>
+          <p>
             Yes, you can upgrade or downgrade your plan at any time from your
             console settings.
           </p>
         </div>
-        <div style="margin-bottom: 2rem">
-          <h4 style="margin-bottom: 0.5rem; font-weight: 700">
-            Do you offer a free plan?
-          </h4>
-          <p style="color: var(--neutral-600)">
+        <div class="faq-item">
+          <h4>Do you offer a free plan?</h4>
+          <p>
             We offer a 14-day free trial on all plans so you can test our
             enterprise features.
           </p>
